src/test/ui/type_length_limit.stderr
error: reached the type-length limit while instantiating `std::mem::drop::<Option<((((...,....., ...), ..., ...), ..., ...)>>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL | pub fn drop<T>(_x: T) {}
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding a `#![type_length_limit="8"]` attribute to your crate
   = note: the full type name has been written to '$TEST_BUILD_DIR/type_length_limit/type_length_limit.long-type.txt'

error: reached the type-length limit while instantiating `<[closure@std::rt::lang_start<()...e<()>>::call_once - shim(vtable)`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
LL |     extern "rust-call" fn call_once(self, args: Args) -> Self::Output;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding a `#![type_length_limit="8"]` attribute to your crate
   = note: the full type name has been written to '$TEST_BUILD_DIR/type_length_limit/type_length_limit.long-type.txt'

error: aborting due to 2 previous errors

